# mobile-ffmpeg

android/app/src/main/cpp/: fftools_ffmpeg.c
src/ffmpeg/ffmpeg_linux/: CMakeLists.txt  ffmpeg_linux.c  ffmpeg_linux.h
